@@ -17,11 +17,14 @@ class ParserOutput
 		$mTemplateIds,      # 2-D map of NS/DBK to rev ID for the template references. ID=zero for broken.
 		$mImages,           # DB keys of the images used, in the array key only
 		$mExternalLinks,    # External link URLs, in the key only
-		$mHTMLtitle,        # Display HTML title
-		$mSubtitle,         # Additional subtitle
 		$mNewSection,       # Show a new section link?
 		$mNoGallery,        # No gallery on category page? (__NOGALLERY__)
 		$mHeadItems;        # Items to put in the <head> section
+	
+	/**
+	 * Overridden title for display
+	 */
+	private $displayTitle = false;
 
 	function ParserOutput( $text = '', $languageLinks = array(), $categoryLinks = array(),
 		$containsOldMagic = false, $titletext = '' )
@@ -37,8 +40,6 @@ class ParserOutput
 		$this->mTemplates = array();
 		$this->mImages = array();
 		$this->mExternalLinks = array();
-		$this->mHTMLtitle = "" ;
-		$this->mSubtitle = "" ;
 		$this->mNewSection = false;
 		$this->mNoGallery = false;
 		$this->mHeadItems = array();
@@ -65,7 +66,6 @@ class ParserOutput
 	function setContainsOldMagic( $com ) { return wfSetVar( $this->mContainsOldMagic, $com ); }
 	function setCacheTime( $t )          { return wfSetVar( $this->mCacheTime, $t ); }
 	function setTitleText( $t )          { return wfSetVar($this->mTitleText, $t); }
-	function setSubtitle( $st )          { return wfSetVar( $this->mSubtitle, $st ); }
 
 	function addCategory( $c, $sort )    { $this->mCategories[$c] = $sort; }
 	function addLanguageLink( $t )       { $this->mLanguageLinks[] = $t; }
@@ -137,6 +137,27 @@ class ParserOutput
 			$this->mHeadItems[] = $section;
 		}
 	}
+	
+	/**
+	 * Override the title to be used for display
+	 * -- this is assumed to have been validated
+	 * (check equal normalisation, etc.)
+	 *
+	 * @param string $text Desired title text
+	 */
+	public function setDisplayTitle( $text ) {
+		$this->displayTitle = $text;
+	}
+	
+	/**
+	 * Get the title to be used for display
+	 *
+	 * @return string
+	 */
+	public function getDisplayTitle() {
+		return $this->displayTitle;
+	}
+	
 }
 
 ?>
