@@ -102,7 +102,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Added option to install to MyISAM
 * (bug 9250) Remove hardcoded minimum image name length of three characters
 * (bug 10338) Enforce signature length limit in Unicode characters instead of bytes
-
+* Fixed DISPLAYTITLE behaviour to reject titles which don't normalise to the
+  same title as the current page, and enabled per default
 
 == Bugfixes since 1.10 ==
 
